--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,15 @@
 
         <service android:name=".SinchService"></service>
 
-        <activity android:name=".MainActivity">
+        <activity android:name="registration.SignupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        activity android:name=".MainActivity"/>
 
         <activity android:name=".videochat.CallScreenActivity"/>
 
