--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <service android:name=".SinchService"></service>
 
-        <activity android:name="registration.SignupActivity">
+        <activity android:name=".registration.SignupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +27,8 @@
             </intent-filter>
         </activity>
 
-        activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity"/>
+
 
         <activity android:name=".videochat.CallScreenActivity"/>
 
@@ -35,6 +36,9 @@
 
         <activity android:name=".videochat.IncomingCallScreenActivity" android:screenOrientation="portrait"
             android:noHistory="true"/>
+
+        <activity android:name=".registration.ResetPasswordActivity"/>
+        
     </application>
 
 </manifest>
