--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         android:theme="@style/AppTheme">
         <service android:name=".SinchService" />
 
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -54,9 +57,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />
+
+
+
     </application>
 
 </manifest>
