--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,8 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <!--
@@ -29,8 +28,9 @@
         android:theme="@style/AppTheme">
         <service android:name=".SinchService" />
 
-        <uses-library android:name="org.apache.http.legacy" android:required="false" />
-
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
         <activity android:name=".registration.SignupActivity">
             <intent-filter>
@@ -53,31 +53,34 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
-        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".MapsActivity"
+        <activity
+            android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-
-
-        <activity android:name=".MainActivity"/>
-
-        <activity android:name=".settings.ContactListActivity"/>
-
-        <activity android:name=".registration.ResetPasswordActivity"/>
-
-        <activity android:name=".checklist.MainActivity"/>
-        <activity android:name=".checklist.AddTaskActivity"/>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".ToolboxActivity" />
+        <activity android:name=".settings.ContactListActivity" />
+        <activity android:name=".registration.ResetPasswordActivity" />
+        <activity android:name=".checklist.MainActivity" />
+        <activity android:name=".checklist.AddTaskActivity" />
 
         <!-- Register the TaskContentProvider -->
         <!-- Set name, authorities, and exported attributes -->
         <!-- exported = false limits access to this ContentProvider to only this app -->
         <provider
-            android:name="com.example.ecare_client.checklist.data.TaskContentProvider"
+            android:name=".checklist.data.TaskContentProvider"
             android:authorities="com.example.android.checklist"
-            android:exported="false"/>
+            android:exported="false" />
 
     </application>
 
