--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
-
+    implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'com.android.support:design:27.1.1'
 }
