--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'com.android.support:design:27.1.1'
+    compile 'com.contrarywind:Android-PickerView:4.1.6'
 }
 apply plugin: 'com.google.gms.google-services'
