--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -73,6 +74,16 @@
         <activity android:name=".registration.ResetPasswordActivity" />
         <activity android:name=".checklist.MainActivity" />
         <activity android:name=".checklist.AddTaskActivity" />
+        <activity android:name=".alarmclock.MainActivity" />
+        <receiver android:name=".alarmclock.clock.LoongggAlarmReceiver">
+            <intent-filter>
+                <action android:name="com.example.ecare_client.alarmclock.clock"/>
+            </intent-filter>
+        </receiver>
+        <activity
+            android:name=".alarmclock.clock.ClockAlarmActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            ></activity>
 
         <!-- Register the TaskContentProvider -->
         <!-- Set name, authorities, and exported attributes -->
