--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.ecare_client"
-        minSdkVersion 24
+        minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'com.android.support:design:27.1.1'
-    compile 'com.contrarywind:Android-PickerView:4.1.6'
+    implementation 'com.contrarywind:Android-PickerView:4.1.6'
 
 }
 apply plugin: 'com.google.gms.google-services'
