--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".ToolboxActivity" />
         <activity android:name=".settings.ContactListActivity" />
+        <activity android:name=".settings.ContactProfileActivity" />
         <activity android:name=".registration.ResetPasswordActivity" />
         <activity android:name=".checklist.CheckListActivity" />
         <activity android:name=".checklist.AddTaskActivity" />
