--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
+
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 28
@@ -10,12 +12,16 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    buildToolsVersion '23.0.1'
+    buildToolsVersion '23.0.2'
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -44,10 +50,14 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
 
-
+//    for maginifier
     implementation 'com.android.support:support-v4:28.0.0-rc02'
     implementation 'com.github.chrisbanes.photoview:library:1.2.4'
 
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'io.reactivex:rxandroid:0.25.0'
 
 }
+
+
 apply plugin: 'com.google.gms.google-services'
