--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/sinch-android-rtc-3.8.0-VIDEO-SNAPSHOT.jar')
 
-    implementation 'com.google.firebase:firebase-database:16.0.2'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
@@ -56,6 +56,14 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'io.reactivex:rxandroid:0.25.0'
+//    for loading images
+    implementation 'com.google.firebase:firebase-storage:16.0.3'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.firebaseui:firebase-ui-storage:3.3.0'
+
+
 
 }
 
